@@ -1,5 +1,6 @@
 v0.6.4
 [tomer953] Remove requirement for ::ACTION:: in action override to be the only text in element
+[tomer953] Management dialog - Insert new menu in the current location instead of add them at the end
 
 v0.6.3
 - Template improvements
